# osiris

./: Cargo.toml  Cross.toml  README.md  gather.sh  osiris_dump.txt
src/: app.rs  commands.rs  main.rs  models.rs  renderer.rs  storage.rs  tui.rs
src/input/: gamepad.rs  mod.rs
src/ui/: mod.rs  renderer.rs  tui.rs
src/ui/widgets/: carousel.rs  common.rs  game.rs  list.rs  mod.rs  panel.rs
src/widgets/: list.rs  metadata.rs  mod.rs
